--- a/src/components/layout/header/auth/HeaderAuth.module.scss
+++ b/src/components/layout/header/auth/HeaderAuth.module.scss
@@ -1,6 +1,12 @@
 .register {
-	@apply rounded-extra-small;
+	@apply rounded-extra-small 600:hidden;
 	border: 1px solid #3b3b3b;
 	padding: 7px 20px;
 	margin: 0 10px 0 14px;
+}
+
+@media (max-width: 1500px) {
+	.register {
+		padding: 5px 13px;
+	}
 }
