--- a/src/components/ui/modal/Modal.module.scss
+++ b/src/components/ui/modal/Modal.module.scss
@@ -1,19 +1,17 @@
 .overlay {
 	@apply w-screen h-screen fixed top-0 bottom-0 left-0 right-0 z-2 bg-black/75 flex justify-center items-start transition-all duration-500 invisible opacity-0;
 
-	&.show {
-		@apply visible opacity-100;
-
-		.window {
-			@apply opacity-100;
-			transform: translateY(50px);
-		}
-	}
+	animation-name: overlayFade;
+	animation-fill-mode: forwards;
+	animation-duration: 700ms;
 }
 .window {
 	@apply relative z-3 rounded-medium bg-gray-700 transition-all duration-700 opacity-0;
 	padding: 38px 70px 45px 70px;
 	transform: translateY(-30%);
+	animation-name: windowTransform;
+	animation-fill-mode: forwards;
+	animation-duration: 700ms;
 }
 .close {
 	@apply absolute right-3.5 top-5;
@@ -22,3 +20,28 @@
 		@apply text-gray-500 text-9lg;
 	}
 }
+
+@keyframes windowTransform {
+	from {
+		opacity: 1;
+		transform: translateY(-30%);
+	}
+
+	to {
+		opacity: 1;
+		transform: translateY(50px);
+	}
+}
+
+@keyframes overlayFade {
+	from {
+		opacity: 0;
+		visibility: hidden;
+	}
+
+	to {
+		visibility: visible;
+		opacity: 1;
+	}
+}
+
