--- a/src/components/ui/storage/Storage.module.scss
+++ b/src/components/ui/storage/Storage.module.scss
@@ -26,15 +26,39 @@
 		@apply text-2lg;
 	}
 }
+.filesFill,
 .filesWrapper {
 	@apply h-full w-full;
+}
+.filesWrapper {
+	@apply flex flex-col;
+}
+.filesFill {
+	@apply overflow-x-hidden pr-10;
+	scrollbar-color: #e9e9e9 #1e1e1e;
+	scrollbar-width: thin;
+
+	&::-webkit-scrollbar,
+	&::-webkit-scrollbar-track,
+	&::-webkit-scrollbar-thumb {
+		width: 6px;
+		border-radius: 6px;
+	}
+
+	&::-webkit-scrollbar-track {
+		background-color: #1e1e1e;
+	}
+
+	&::-webkit-scrollbar-thumb {
+		background-color: #e9e9e9;
+	}
 }
 .files {
 	@apply w-full flex flex-wrap gap-5;
 }
 .file {
-	@apply relative w-full h-fit;
-	width: calc(100% / 10 - 18px);
+	@apply relative w-full h-fit animate-fade;
+	width: calc(100% / 9 - 18px);
 }
 .fileBtn {
 	@apply flex flex-col gap-2 justify-between w-full h-full;
@@ -119,5 +143,16 @@
 		> svg {
 			@apply text-lg;
 		}
+	}
+}
+.search {
+	@apply bg-gray-800 rounded-small flex items-center gap-10 px-4 mb-10;
+
+	> input {
+		@apply bg-transparent outline-border-none py-2.5;
+	}
+
+	> svg {
+		font-size: 14px;
 	}
 }
